--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,11 @@
         app:layout_constraintTop_toBottomOf="@id/textView"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
-
+    <Button
+        android:id="@+id/buttonPanel"
+        android:text="Lancer Diarra Activity"
+        android:onClick=""
+        android:layout_width=""
+        android:layout_height=""
 
 </androidx.constraintlayout.widget.ConstraintLayout>
