--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,13 +28,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
+        android:contentDescription="@string/app_name"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
+
     <Button
         android:id="@+id/buttonPanel"
-        android:text="Lancer Diarra Activity"
-        android:onClick=""
-        android:layout_width=""
-        android:layout_height=""
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
+        android:layout_height="12dp"
+        android:layout_width="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
