--- a/app/src/main/res/layout/activity_diarra.xml
+++ b/app/src/main/res/layout/activity_diarra.xml
@@ -9,13 +9,15 @@
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="381dp"
-        android:layout_height="147dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/switcher_pour_activer_le_mode_sombre"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/bt_continue"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <ImageView
@@ -30,14 +32,48 @@
         android:contentDescription="@string/welcome_name" />
 
     <EditText
+        android:id="@+id/tv_prenom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/switch1"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/entrez_votre_pr_nom_ici"
         android:autofillHints="name"
         android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/tv_nom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_prenom"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/entrez_votre_nom_ici"
+        android:autofillHints="name"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/tv_age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_nom"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/entrez_votre_pr_age_ici"
+        android:autofillHints="name"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/bt_continue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_age"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/continuer_text"
+        />
 
 
 
